# vizer-cli

./: CRATE_README.md  Cargo.toml  README-pt.md  README.md
src/: choose.rs  episode.rs  inquire_style.rs  language.rs  main.rs  media.rs  season.rs
src/cli/: choose_episode.rs  choose_episode_with_images.rs  choose_lang.rs  choose_media.rs  choose_media_with_images.rs  choose_medias_with_images.rs  choose_season.rs  choose_with_images.rs  get_media_name_from_user.rs  get_media_url.rs  get_medias.rs  get_video_url.rs  menu.rs  mod.rs  search_media.rs
src/driver/: click_element.rs  mod.rs  parse_episodes.rs  parse_seasons.rs  start_driver.rs
src/fs/: mod.rs  posters.rs  temp_dir.rs
src/player/: mod.rs  mpv.rs  play_video.rs  vlc.rs  watch_media.rs
src/scraper/: is_offline.rs  mod.rs
