[package]
name = "vizer-cli"
version = "0.3.0"
edition = "2021"
authors = ["João Ribeiro"]
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.17.1"
reqwest = { version = "0.11", features = ["blocking"] }
clap = "4.4.4"
tokio = "1.32.0"
futures = "0.3.30"
selthi = { version = "0.2.4", features = ["with_images"] }
fantoccini = "0.21.0"
